// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingDetailsApply displays habitat link for eligibility requirements when listing is habitat and is open 1`] = `
<DocumentFragment>
  <div
    class="md:px-0 px-2"
  >
    <section
      class="aside-block "
    >
      <h4
        class="text__underline-weighted"
      >
        How to Apply
      </h4>
      <div
        class="text-sm text-gray-750"
      >
        <p
          class="mb-4"
        >
          <span>
            Make sure you fulfill the 
            <a
              href="https://habitatgsf.org/amber-drive-info/"
              target="_blank"
            >
              eligibility requirements
            </a>
             for this listing before you begin.
          </span>
        </p>
        <p
          class="mb-4"
        >
          Your loan pre-approval letter must be dated within the past 120 days, and your Homebuyer Education verification must be dated within the past year.
        </p>
        <a
          class="button is-primary w-full transition"
          href="listings/a0W8H000000HI2uUAG/apply-welcome/intro"
          tabindex="0"
        >
          Apply Online
        </a>
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`ListingDetailsApply does not render if listing is closed 1`] = `<DocumentFragment />`;

exports[`ListingDetailsApply renders if listing is open 1`] = `
<DocumentFragment>
  <div
    class="md:px-0 px-2"
  >
    <section
      class="aside-block "
    >
      <h4
        class="text__underline-weighted"
      >
        How to Apply
      </h4>
      <div
        class="text-sm text-gray-750"
      >
        <p
          class="mb-4"
        >
          <span>
            Make sure you fulfill the 
            <a
              href="https://sf.gov/determine-if-you-can-buy-affordable-housing-program"
              target="_blank"
            >
              eligibility requirements
            </a>
             for this listing before you begin.
          </span>
        </p>
        <p
          class="mb-4"
        >
          Your loan pre-approval letter must be dated within the past 120 days, and your Homebuyer Education verification must be dated within the past year.
        </p>
        <a
          class="button is-primary w-full transition"
          href="listings/a0W0P00000GlKfBUAV/apply-welcome/intro"
          tabindex="0"
        >
          Apply Online
        </a>
      </div>
    </section>
  </div>
</DocumentFragment>
`;
